objects/Milestone1_Milestone__c.object
<CustomObject>
    <description>Force.com Labs - PM - Milestones are significant events in the life-cycle of a Project. Milestones can have tasks and sub-milestones associated with them.</description>
    <fields>
        <fullName>Abatements__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Abatements?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Account_Tier__c</fullName>
        <formula>TEXT(Account__r.Tier__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Tier</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Milestones</relationshipLabel>
        <relationshipName>Milestones</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Actual_Expense_From_Sub_Milestones__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>Calculated from expense records related to tasks on child milestones</inlineHelpText>
        <label>Actual Expense From Sub-Milestones</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Actual_Expense_From_Tasks__c</fullName>
        <inlineHelpText>Calculated from expense records related to tasks on this milestone</inlineHelpText>
        <label>Actual Expense From Tasks</label>
        <summarizedField>Milestone1_Task__c.Total_Expense__c</summarizedField>
        <summaryForeignKey>Milestone1_Task__c.Project_Milestone__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Actual_Hours_From_Sub_Milestones__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>Calculated from time records related to tasks on child milestones</inlineHelpText>
        <label>Actual Hours From Sub-Milestones</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Actual_Hours_From_Tasks__c</fullName>
        <inlineHelpText>Calculated from time records related to tasks on this milestone</inlineHelpText>
        <label>Actual Hours From Tasks</label>
        <summarizedField>Milestone1_Task__c.Total_Hours__c</summarizedField>
        <summaryForeignKey>Milestone1_Task__c.Project_Milestone__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Alias__c</fullName>
        <description>This is the alias for a milestone.</description>
        <inlineHelpText>An alias helps you associate a task to a milestone using the single line entry home page component.</inlineHelpText>
        <label>Milestone Alias</label>
        <length>10</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Attorney__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>The RES Attorney who has been assigned to this Legal Support Request.</inlineHelpText>
        <label>Attorney</label>
        <lookupFilter>
            <active>true</active>
            <booleanFilter>1 OR 2</booleanFilter>
            <errorMessage>This Attorney does not exist as a Contact, on one the Renewable Energy System Accounts. Please add there Contact here: https://res-group.lightning.force.com/lightning/r/Account/001i000000svaF8AAI/view</errorMessage>
            <filterItems>
                <field>Contact.Account.Name</field>
                <operation>contains</operation>
                <value>Renewable Energy Systems</value>
            </filterItems>
            <filterItems>
                <field>Contact.Account.Name</field>
                <operation>contains</operation>
                <value>RES T&amp;D</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Milestones (Attorney)</relationshipLabel>
        <relationshipName>Milestones1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Avoided_Cost__c</fullName>
        <label>Avoided Cost</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>BD_Finance_Complete__c</fullName>
        <formula>IF(ISBLANK(Opportunity__r.COD_Date__c),1,0)+
IF(ISBLANK(Term_Yrs__c),1,0)+
IF(ISBLANK(Sales_Tax_Rate_State_County_Local__c ),1,0)+
IF(ISBLANK(Development_Costs__c),1,0)+
IF(ISBLANK(Land_Payments_During_Constr__c),1,0)+
IF(ISBLANK(Land_Royalties__c),1,0)+
IF(ISBLANK(Land_Royalties_Dollars__c),1,0)+
IF(ISBLANK(State_Assessed_Taxes__c),1,0)+
IF(ISBLANK(County_District__c),1,0)+
IF(ISBLANK(Other_Taxing_District_s__c),1,0)</formula>
        <label>BD Finance Complete?</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BOS_Bid_or_Estimate__c</fullName>
        <label>BOS - Bid or Estimate?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Bid</fullName>
                </value>
                <value>
                    <fullName>Estimate</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BOS_per_watt_all_non_module__c</fullName>
        <inlineHelpText>BOS Cost w/ Contingency [no profit] (per watt, all non-module)</inlineHelpText>
        <label>BOS(per watt, all non-module) [see Help]</label>
        <precision>10</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>BOS_per_watt_all_non_system__c</fullName>
        <inlineHelpText>BOS Cost w/ Contingency [no profit] (per watt, all non-system)</inlineHelpText>
        <label>BOS(per watt, all non-system) [see Help]</label>
        <precision>10</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Battery_Price_per_watt__c</fullName>
        <label>Battery Price (per watt)</label>
        <precision>10</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Ben_s_Approval__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Ben&apos;s Approval</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Bid_Resources__c</fullName>
        <inlineHelpText>What are the resources needed to bid?</inlineHelpText>
        <label>Bid Resources</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Site</fullName>
                </value>
                <value>
                    <fullName>Control</fullName>
                </value>
                <value>
                    <fullName>Permitting</fullName>
                </value>
                <value>
                    <fullName>Interconnection</fullName>
                </value>
                <value>
                    <fullName>Pre-Construction</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Blocked_Tasks_in_Sub_Milestones__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>How many tasks are blocked in sub-milestones?</inlineHelpText>
        <label>Blocked Tasks (in Sub-Milestones)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Blocked_Tasks_in_Tasks__c</fullName>
        <inlineHelpText>How many tasks are flagged as blocked?</inlineHelpText>
        <label>Blocked Tasks (in Tasks)</label>
        <summaryFilterItems>
            <field>Milestone1_Task__c.Blocked__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>Milestone1_Task__c.Project_Milestone__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>COD_Date__c</fullName>
        <label>COD Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Calculated_IRR_2__c</fullName>
        <label>Calculated IRR [2]</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Calculated_IRR__c</fullName>
        <label>Calculated IRR</label>
        <precision>6</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Calculated_PPA_2__c</fullName>
        <label>Calculated PPA [2]</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Calculated_PPA__c</fullName>
        <inlineHelpText>$/MWh</inlineHelpText>
        <label>Calculated PPA</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Complete_Tasks_in_Sub_Milestones__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>Number of complete tasks related to sub-milestones</inlineHelpText>
        <label>Complete Tasks (in Sub-Milestones)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Complete_Tasks_in_Tasks__c</fullName>
        <inlineHelpText>Number of complete tasks related to this milestone</inlineHelpText>
        <label>Complete Tasks (in Tasks)</label>
        <summaryFilterItems>
            <field>Milestone1_Task__c.Complete__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>Milestone1_Task__c.Project_Milestone__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Complete__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>This signifies that this milestone has been completed.</inlineHelpText>
        <label>Complete</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Completed_Date__c</fullName>
        <label>Completed Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Construction_Period__c</fullName>
        <formula>(COD_Date__c - Construction_Start_Date_GBD__c)/30.5</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>The Number of Months between COD Date &amp; Construction Start Date</inlineHelpText>
        <label>Construction Period</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Construction_Period_months__c</fullName>
        <label>Construction Period (months)</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Construction_Start_Date_GBD__c</fullName>
        <label>Construction Start Date (GBD)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Continue_with_Bid__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Yes / No</inlineHelpText>
        <label>Continue with Bid?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <label>Country</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Australia</fullName>
                </value>
                <value>
                    <fullName>Belgium</fullName>
                </value>
                <value>
                    <fullName>Brazil</fullName>
                </value>
                <value>
                    <fullName>Canada</fullName>
                </value>
                <value>
                    <fullName>Chile</fullName>
                </value>
                <value>
                    <fullName>Finland</fullName>
                </value>
                <value>
                    <fullName>France</fullName>
                </value>
                <value>
                    <fullName>Germany</fullName>
                </value>
                <value>
                    <fullName>India</fullName>
                </value>
                <value>
                    <fullName>Ireland</fullName>
                </value>
                <value>
                    <fullName>Italy</fullName>
                </value>
                <value>
                    <fullName>Japan</fullName>
                </value>
                <value>
                    <fullName>Morocco</fullName>
                </value>
                <value>
                    <fullName>Netherlands</fullName>
                </value>
                <value>
                    <fullName>Norway</fullName>
                </value>
                <value>
                    <fullName>Pakistan</fullName>
                </value>
                <value>
                    <fullName>Poland</fullName>
                </value>
                <value>
                    <fullName>Portugal</fullName>
                </value>
                <value>
                    <fullName>Puerto Rico</fullName>
                </value>
                <value>
                    <fullName>Saudi Arabia</fullName>
                </value>
                <value>
                    <fullName>South Africa</fullName>
                </value>
                <value>
                    <fullName>Spain</fullName>
                </value>
                <value>
                    <fullName>Sweden</fullName>
                </value>
                <value>
                    <fullName>Turkey</fullName>
                </value>
                <value>
                    <fullName>UAE</fullName>
                </value>
                <value>
                    <fullName>United Kingdom</fullName>
                </value>
                <value>
                    <fullName>United States</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>County_District__c</fullName>
        <label>County District</label>
        <precision>10</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Customer_Background__c</fullName>
        <inlineHelpText>Provide background on the customer if not a key account.</inlineHelpText>
        <label>Customer Background</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Customer_Criteria__c</fullName>
        <inlineHelpText>Identify the customer&apos;s primary criteria for evaluating this proposal.</inlineHelpText>
        <label>Customer Criteria</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Price</fullName>
                </value>
                <value>
                    <fullName>Location</fullName>
                </value>
                <value>
                    <fullName>Experience</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Customer_Relationship_Status__c</fullName>
        <description>Other potential Values:
Referenced via ___
Reconnecting
Broker Leads?
Marketing Generated</description>
        <inlineHelpText>Categorize our relationship with the Customer.</inlineHelpText>
        <label>Customer Relationship Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Cold Lead</fullName>
                </value>
                <value>
                    <fullName>Warm Lead (Shown Interest)</fullName>
                </value>
                <value>
                    <fullName>Pre-Qualified Account</fullName>
                </value>
                <value>
                    <fullName>Close/Good Relationship with KDM</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Dashboard_User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Dashboard User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Milestones</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Deadline__c</fullName>
        <inlineHelpText>The Proposal Due Date, or the date that this deadline needs to be finished by.</inlineHelpText>
        <label>Deadline</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <inlineHelpText>Project details and constraints. Most importantly targets or limits on AC capacity</inlineHelpText>
        <label>Description</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Development_Costs__c</fullName>
        <label>Development Costs</label>
        <precision>10</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Development_Fee__c</fullName>
        <inlineHelpText>$/kW</inlineHelpText>
        <label>Development Fee</label>
        <precision>10</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Distribution_System_Upgrades__c</fullName>
        <label>Distribution System Upgrades</label>
        <precision>10</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Do_we_have_viable_site__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>BD responsible for providing.</inlineHelpText>
        <label>Do we have viable site?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Duration__c</fullName>
        <formula>Deadline__c -  Kickoff__c + 1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Days between Kickoff and Deadline.</inlineHelpText>
        <label>Duration</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Estimated_Expense_From_Sub_Milestones__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>Calculated from tasks on child milestones</inlineHelpText>
        <label>Estimated Expense From Sub-Milestones</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Estimated_Expense_From_Tasks__c</fullName>
        <inlineHelpText>Calculated from tasks on this milestone</inlineHelpText>
        <label>Estimated Expense From Tasks</label>
        <summarizedField>Milestone1_Task__c.Estimated_Expense__c</summarizedField>
        <summaryForeignKey>Milestone1_Task__c.Project_Milestone__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Estimated_Hours_From_Sub_Milestones__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>Calculated from tasks on child milestones</inlineHelpText>
        <label>Estimated Hours From Sub-Milestones</label>
        <precision>16</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Estimated_Hours_From_Tasks__c</fullName>
        <inlineHelpText>Calculated from tasks on this milestone</inlineHelpText>
        <label>Estimated Hours From Tasks</label>
        <summarizedField>Milestone1_Task__c.Estimated_Hours__c</summarizedField>
        <summaryForeignKey>Milestone1_Task__c.Project_Milestone__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Expense_Budget__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>The expense budget for the milestone.</inlineHelpText>
        <label>Milestone Expense Budget</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Expense_Budget_from_Sub_Milestones__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>The expense budget all the sub milestones of this milestone.</inlineHelpText>
        <label>Expense Budget from Sub-Milestones</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Finance_Partner_Needed__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Do we need a financial partner named?</inlineHelpText>
        <label>Finance Partner Needed?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Finance_Partner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Finance Partner</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Milestones (Finance Partner)</relationshipLabel>
        <relationshipName>Milestones1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Hours_Budget__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>The hours budget for the milestone.</inlineHelpText>
        <label>Milestone Hours Budget</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Hours_Budget_from_Sub_Milestones__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>The total hours budget for all the sub milestones for this milestone.</inlineHelpText>
        <label>Hours Budget from Sub-Milestones</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>How_to_Win__c</fullName>
        <inlineHelpText>How will RES position to win?

Focus on the &quot;how&quot;, strategy will get developed during bid preparation.
RES vs. competition? Which competitor do we fear the most?</inlineHelpText>
        <label>How to Win</label>
        <length>2768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ITC_Rate_on_Eligible_CapEx__c</fullName>
        <label>ITC Rate on Eligible CapEx</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>ImportID__c</fullName>
        <inlineHelpText>An Import ID used during the XML export/import process only.</inlineHelpText>
        <label>Import ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Insurance__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Insurance</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Insurance_during_Const__c</fullName>
        <label>Insurance (during Const.)</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Interconnection_Non_Typical__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Interconnection (Non-Typical)?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Interconnection_Notes__c</fullName>
        <inlineHelpText>If &quot;Interconnection (Non Typical)?&quot; is TRUE, then please describe the interconnection strategy - any costs that need to be included, POI location, end of RES&apos; scope of work...etc.</inlineHelpText>
        <label>Interconnection Notes</label>
        <length>2768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Interconnection_Voltage__c</fullName>
        <label>Interconnection Voltage</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>KDM_Relationship__c</fullName>
        <inlineHelpText>Describe our Relationship with this Key Decision Maker</inlineHelpText>
        <label>KDM Relationship</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Key_Decision_Maker__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Who is the key decision-maker for this bid?  And what sort of relationship do we have with him/her?</inlineHelpText>
        <label>Key Decision Maker</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Milestones</relationshipLabel>
        <relationshipName>Milestones</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Key_Factors_in_Decision__c</fullName>
        <inlineHelpText>What key factors impact the bid decision?</inlineHelpText>
        <label>Key Factors in Decision</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Financing</fullName>
                </value>
                <value>
                    <fullName>Location/Region</fullName>
                </value>
                <value>
                    <fullName>Consequential Damages</fullName>
                </value>
                <value>
                    <fullName>Unlimited Liabilities</fullName>
                </value>
                <value>
                    <fullName>Onerous Warranty Period</fullName>
                </value>
                <value>
                    <fullName>Performance Guarantees</fullName>
                </value>
                <value>
                    <fullName>Permitting</fullName>
                </value>
                <value>
                    <fullName>Unachievable COD Timeline</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Kickoff__c</fullName>
        <inlineHelpText>When should this milestone kickoff?</inlineHelpText>
        <label>Kickoff</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Land_Acreage__c</fullName>
        <label>Land Acreage</label>
        <precision>10</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Land_Payments_During_Constr__c</fullName>
        <label>Land Payments (During Constr.)</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Land_Royalties_Dollars__c</fullName>
        <inlineHelpText>$/yr</inlineHelpText>
        <label>Land Royalties/Rent/Purchase Price</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Land_Royalties__c</fullName>
        <inlineHelpText>%/yr</inlineHelpText>
        <label>Land Royalties/Rent/Purchase Price</label>
        <precision>10</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Late_Tasks_in_Sub_Milestones__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>Number of incomplete and overdue tasks related to child milestones</inlineHelpText>
        <label>Late Tasks (in Sub-Milestones)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Late_Tasks_in_Tasks_2__c</fullName>
        <inlineHelpText>How many tasks are late?</inlineHelpText>
        <label>Late Tasks (in Tasks)2</label>
        <summaryFilterItems>
            <field>Milestone1_Task__c.Complete__c</field>
            <operation>equals</operation>
            <value>False</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Milestone1_Task__c.Days_Late__c</field>
            <operation>greaterThan</operation>
            <value>0</value>
        </summaryFilterItems>
        <summaryForeignKey>Milestone1_Task__c.Project_Milestone__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Late_Tasks_in_Tasks__c</fullName>
        <inlineHelpText>Number of incomplete and overdue tasks related to this milestone</inlineHelpText>
        <label>Late Tasks (in Tasks)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Latest_Update__c</fullName>
        <label>Latest Update</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Latitude__c</fullName>
        <label>Latitude</label>
        <precision>11</precision>
        <scale>8</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Layout_Complete__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Layout Complete?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Layout_Required__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Layout Required?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Location_Point_of_Interconnection__c</fullName>
        <label>Location (Point of Interconnection)</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Longitude__c</fullName>
        <label>Longitude</label>
        <precision>11</precision>
        <scale>8</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Management_Fee__c</fullName>
        <label>Management Fee</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Meter_Location__c</fullName>
        <defaultValue>&quot;High Side&quot;</defaultValue>
        <inlineHelpText>High Side / Low Side of Transformer. Default value is High Side.</inlineHelpText>
        <label>Meter Location</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>High Side</fullName>
                </value>
                <value>
                    <fullName>Low Side</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Milestone_Calendar__c</fullName>
        <defaultValue>&quot;https://c.na15.visual.force.com/apex/Milestone1_Calendar_Large?sfdc.tabName=01ri00000015hhv&quot;</defaultValue>
        <label>Milestone Calendar</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Milestone_Outcome__c</fullName>
        <label>Milestone Outcome</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>No Future Business</fullName>
                </value>
                <value>
                    <fullName>Generated an External Lead</fullName>
                </value>
                <value>
                    <fullName>Generated an Opportunity w/ Account</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>NCF_DC__c</fullName>
        <formula>Project_Output_MWh_per_Year__c  /(Project_Nameplate_Output_MWdc__c *8760)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Project Output (MWh per yr)  /  (Project Nameplate Output (MWdc) *8760)</inlineHelpText>
        <label>NCF (DC)</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>NameClean__c</fullName>
        <description>Formula designed to keep a Gantt safe chart name.  Note: this field may be discontinued.</description>
        <formula>SUBSTITUTE(Name, &apos;&quot;&apos;, &apos; &apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>NameClean</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Next_Steps__c</fullName>
        <label>Next Steps</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>O_M_Fixed__c</fullName>
        <inlineHelpText>$000/MW</inlineHelpText>
        <label>O&amp;M - Fixed</label>
        <precision>10</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>O_M_Variable__c</fullName>
        <inlineHelpText>$000/MW</inlineHelpText>
        <label>O&amp;M - Variable</label>
        <precision>10</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Offline_Parasitic_Load__c</fullName>
        <inlineHelpText>Electricity consumption during periods in which the PV plant is not producing power.&quot;</inlineHelpText>
        <label>Offline Parasitic Load (kWhr)</label>
        <precision>9</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Okay_to_Reparent__c</fullName>
        <defaultValue>false</defaultValue>
        <description>A hidden field used to prevent users from manually moving Milestones to different Projects</description>
        <label>Okay to Reparent</label>
        <type>Checkbox</type>
    </fields>
</CustomObject>